--- a/src/App.css
+++ b/src/App.css
@@ -1,52 +1,83 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+  background-color: #202c37  !important ;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.cards-wrapper{
+  margin: 2rem 4.5rem 2rem 4.5rem;
 }
 
-.App {
+.card-image-wrapper {
+  width: 100%;
+  height: 200px;
+}
+
+.navbar {
+  background-color: #2b3945!important;
+}
+
+
+.has-search .form-control {
+  padding-left: 2.375rem;
+  background-color: #2b3945!important;
+  border: 1px solid #161b20!important;
+  width: 300px;
+  color: white;
+}
+.has-search .form-control::placeholder {
+
+  color: white;
+}
+.search-input-control {
+  height: 3rem !important;
+  color: white !important;
+}
+
+.has-search .form-control-feedback {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  width: 2.375rem;
+  height: 3rem;
+  line-height: 3rem;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
   pointer-events: none;
+  color: white;
+  
+}
+.search-main-wrapper {
+  padding: 5rem 0 0 13rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+
+.backButton{
+  background-color: #052055a1;
+  border: 1px solid #ffffff38;
+  color: white !important;
+
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.card-main-wrapper { 
+  background-color: #2b3945 !important;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.backButton:hover{
+  background-color: #08378fa1;
+  transition: background-color 0.2s;
+  border: 1px solid #ffffff38;
+  color: white;
+  text-decoration: none;
+
+  
 }
