--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,26 @@
 body {
 
-  background-color: #ffffff  !important ;
+ background-color: hsl(207, 26%, 17%) !important;
+}
+*:focus {
+  outline: hsl(209, 12%, 34%) solid 2px !important;
+  border-radius: 10px !important;
+}
+
+
+/* NAVBAR */
+.navbar {
+  background-color: hsl(209, 23%, 22%) !important;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  width: 100%;
+}
+/* NAVBAR */
+
+
+/* CARD inner styling START*/
+.card-main-wrapper { 
+  background-color: hsl(209, 23%, 22%) !important;
+  color: rgb(255, 255, 255) !important;
 }
 
 .cards-wrapper{
@@ -9,29 +29,34 @@ body {
 
 .card-image-wrapper {
   width: 100%;
-  height: 200px;
+  height: 220px;
 }
 
-.navbar {
-  background-color: #000000!important;
+.img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
+/* CARD inner styling END*/
 
 
+/* SEARCH input styling START*/
 .has-search .form-control {
   padding-left: 2.375rem;
-  background-color: #ffffff!important;
-  border: 1px solid #161b20!important;
+  background-color: hsl(209, 23%, 22%)!important;
+  border : none;
   outline: black !important;
   width: 300px;
-  color: black;
+  color: white;
+  box-shadow: 4px 3px 6px rgba(0,0,0,0.16), 4px 3px 6px rgba(0,0,0,0.23);
 }
 
 .has-search .form-control::placeholder {
   outline: black !important;
-
-  color: black;
+  color: white;
 }
+
 .search-input-control {
   height: 3rem !important;
   color: black !important;
@@ -61,20 +86,39 @@ body {
   height: 25vh;
   display: flex;
   margin: 0 !important;
- 
   align-items: center;
 }
+/* SEARCH input styling END */
 
 
+/* BUTTOn inside Data receiver styling component START */
+.backButton:focus{
+  outline: none !important;
+  border-radius: 5px !important;
 
+ }
 
-.backButton{
-  background-color: #fcfcfc;
+.backButton:hover{
+  background-color: hsl(208, 29%, 18%);
+  transition: background-color 0.2s;
   border: 1px solid #00000038;
-  color: black !important;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
 
   
 }
+
+.backButton{
+  background-color: hsl(209, 23%, 22%);
+  border: 1px solid #00000038;
+  color: white !important;
+  border-radius: 5px;
+  box-shadow: 4px 3px 6px rgba(0,0,0,0.16), 4px 3px 6px rgba(0,0,0,0.23);
+
+}
+/* BUTTOn inside Data receiver component START */
+
+/* Toggling Classes COMPONENTS in the JSX part */
 #rendered-country-data-on {
   max-width: 80%;
   width: 100%;
@@ -92,39 +136,30 @@ body {
   justify-content: center !important;
   flex-wrap: wrap !important;
 }
+/* Toggling Classes COMPONENTS in the JSX part */
 
-.card-main-wrapper { 
-  background-color: #ffffff !important;
-  color: black !important;
-}
 
+/* Select Region styling */
 .select-region {
-  background-color: rgb(255, 255, 255);
-  padding: 0.2rem 3rem 0.2rem 0;
+  background-color: hsl(209, 23%, 22%) !important;
+  color: white;
+  border: none !important;
+  padding: 0.2rem 2rem 0.2rem 0.5rem;
+  margin-right: 0.5rem;
   border-radius: 5px;
   height: 50px;
-  border: 1px solid #000000;
+  box-shadow: 4px 3px 6px rgba(0,0,0,0.16), 4px 3px 6px rgba(0,0,0,0.23);
 
 }
-.select-region option {
-  
-  
+
+select:focus {
+  background-color: hsl(209, 23%, 22%) !important;
+  outline: none !important;
+  border-radius: 5px !important;
+  border: none !important;
 }
 
+/* Select Region styling */
 
-.img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  display: block;
-}
 
-.backButton:hover{
-  background-color: #f1f1f1;
-  transition: background-color 0.2s;
-  border: 1px solid #00000038;
-  color: rgb(0, 0, 0);
-  text-decoration: none;
 
-  
-}
